Add hover for task 5

--- a/app/blocks/button/button.pug
+++ b/app/blocks/button/button.pug
@@ -14,3 +14,7 @@ mixin button-plus(newtag)
     +e.SPAN.text
       block
     +e.icon_plus
+
+mixin button-plus-thin
+  +b.BUTTON.button-plus-thin&attributes(attributes)
+    +icon('plus-thin')
