--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -583,3 +583,20 @@
     }
   }
 }
+
+.button-plus-thin {
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+
+  svg {
+    fill: $color-basic;
+    width: 22px;
+    height: 22px;
+    transition: fill $ease-main;
+  }
+
+  &:hover svg {
+    fill: $color-basic-dark;
+  }
+}
