--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -255,19 +255,10 @@
     &_extended {
       padding-bottom: 50px;
 
-      .js-add-object {
+      .button-plus-thin {
         position: absolute;
         right: 0;
         bottom: 0;
-        width: 22px;
-        height: 22px;
-        cursor: pointer;
-
-        svg {
-          fill: $color-basic;
-          width: 22px;
-          height: 22px;
-        }
       }
     }
 
