--- a/app/pages/new-space/new-space-step5.pug
+++ b/app/pages/new-space/new-space-step5.pug
@@ -65,8 +65,7 @@ block content
                     +form-section-header._mg24
                       +form-section-title('h5')._small Basic Rule points (optional)
                     +form-section-content()(data-deleted-group data-point-group)._extended
-                      button.js-add-object
-                        +icon('plus-thin')
+                      +button-plus-thin.js-add-object
                       +form-section-wrapper()._mg29(data-deleted-object data-point-object)
                         +form-box-removable('')._icon
                           +input(type="text" name="rules[0]" placeholder="Rule" value="Pets allowed").input_points
