popup payment form

--- a/app/blocks/card-mask/card-mask.scss
+++ b/app/blocks/card-mask/card-mask.scss
@@ -16,6 +16,14 @@
       @include screen('sm') {
         margin-right: 10px;
       }
+
+      #{$b}_star & {
+        margin-right: 18px;
+
+        @include screen('sm') {
+          margin-right: 10px;
+        }
+      }
     }
   }
 
@@ -26,6 +34,10 @@
 
     @include screen('sm') {
       @include text15;
+    }
+
+    &_fw400 {
+      font-weight: 400;
     }
   }
 }
