--- a/app/blocks/dots/dots.pug
+++ b/app/blocks/dots/dots.pug
@@ -5,3 +5,7 @@ mixin dots()
 mixin dots-dot()
   +e.dot&attributes(attributes)
     block
+
+mixin dots-dot-star()
+  +e.dot_star&attributes(attributes)
+    +icon('star').__icon
