--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -164,6 +164,12 @@
       }
     }
 
+    &_mg70 {
+      &:not(:last-of-type) {
+        margin-bottom: 70px;
+      }
+    }
+
     &_mg75 {
       &:not(:last-of-type) {
         margin-bottom: 75px;
@@ -1344,6 +1350,16 @@
 
   &__mesure {
     flex: 1;
+  }
+
+  &__card {
+    margin-top: -3px;
+    margin-left: -3px;
+
+    @include screen('sm') {
+      margin-top: 0;
+      margin-left: 0;
+    }
   }
 
   &_flex {
