--- a/app/components/popup-payment-form/popup-payment-form.pug
+++ b/app/components/popup-payment-form/popup-payment-form.pug
@@ -90,7 +90,8 @@ mixin popup-payment-form()
                   +form-section-wrapper
                     +form-box('Postcode')
                       +input(type="text" name="postcode" placeholder="Postcode")
-          +form-section._mg66(data-form-element="card")
+          +form-section._mg70(data-form-element="card")
+            +credit-card.__card 0338
           +form-section._mg66._mt-8(data-form-element="newCard")
             +form-section-header._mg30
               +form-section-title('h4')._small Fill the form to continue
