--- a/app/components/popup-payment-form/popup-payment-form.scss
+++ b/app/components/popup-payment-form/popup-payment-form.scss
@@ -4,14 +4,14 @@
   .popup {
 
     &__inner-content {
-      padding-top: 110px;
+      padding: 110px 0 60px;
 
       @include screen('md') {
-        padding-top: 90px;
+        padding: 90px 0;
       }
 
       @include screen('sm') {
-        padding-top: 65px;
+        padding: 65px 0 60px;
       }
     }
   }
