--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -166,6 +166,7 @@ $color-form-toggle-title: #1f242a;
 $color-step-active: #2a3037;
 $color-tab-disabled: #a1a5ab;
 $color-compose-text: #a6aab3;
+$color-star-gray: #bcc6ca;
 
 // ##########
 // Transitions
