--- a/app/blocks/card-mask/card-mask.pug
+++ b/app/blocks/card-mask/card-mask.pug
@@ -2,22 +2,40 @@ mixin card-mask()
   +b.card-mask&attributes(attributes)
     +e.item
       +dots
-        +dots-dot
-        +dots-dot
-        +dots-dot
-        +dots-dot
+        - for (var i = 0; i < 4; i++) {
+          +dots-dot
+        -}
     +e.item
       +dots
-        +dots-dot
-        +dots-dot
-        +dots-dot
-        +dots-dot
+        - for (var i = 0; i < 4; i++) {
+          +dots-dot
+        -}
     +e.item
       +dots
-        +dots-dot
-        +dots-dot
-        +dots-dot
-        +dots-dot
+        - for (var i = 0; i < 4; i++) {
+          +dots-dot
+        -}
     +e.item
       +e.text
+        block
+
+mixin card-mask-star()
+  +b.card-mask_star&attributes(attributes)
+    +e.item
+      +dots
+        - for (var i = 0; i < 4; i++) {
+          +dots-dot-star._gray
+        -}
+    +e.item
+      +dots
+        - for (var i = 0; i < 4; i++) {
+          +dots-dot-star._gray
+        -}
+    +e.item
+      +dots
+        - for (var i = 0; i < 4; i++) {
+          +dots-dot-star._gray
+        -}
+    +e.item
+      +e.text._fw400
         block
