--- a/app/blocks/dots/dots.scss
+++ b/app/blocks/dots/dots.scss
@@ -4,11 +4,14 @@
   display: inline-block;
 
   &__dot {
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: 6px;
     height: 6px;
     vertical-align: top;
     border-radius: 50%;
+    color: $color-basic;
     background-color: $color-basic;
     background-clip: content-box;
     overflow: hidden;
@@ -16,5 +19,29 @@
     &:not(:last-child) {
       margin-right: 4px;
     }
+
+    &_gray {
+      background-color: $color-star-gray;
+      color: $color-star-gray;
+    }
+
+    &_star {
+      background-color: transparent;
+      border-radius: 0;
+      width: 8px;
+      height: 8px;
+      overflow: visible;
+
+      &:not(:last-child) {
+        margin-right: 5px;
+      }
+    }
+  }
+
+  &__icon {
+    display: block;
+    width: 100%;
+    height: 100%;
+    fill: currentColor;
   }
 }
