fixes for payment popup

--- a/app/blocks/invoice-info/invoice-info.pug
+++ b/app/blocks/invoice-info/invoice-info.pug
@@ -9,5 +9,5 @@ mixin invoice-info(data)
       if data.state
         +e.state!= data.state
       if data.pay
-        +button()._smaller.__button.js-popup(href="#popup-payment-form" data-stoppropagation) Pay now
+        +button()._smaller.__button.js-popup-top(href="#popup-payment-form" data-stoppropagation) Pay now
     block
