--- a/app/blocks/scroll-form/scroll-form.pug
+++ b/app/blocks/scroll-form/scroll-form.pug
@@ -10,5 +10,5 @@ mixin scroll-form()
       +input-number('count').__counter
       +e.buttons
         +button('button')(type="button")._short.__button Request Reservation
-        +button('a')(href="#popup-arrange-viewing")._border._border_bg-white._short.__button.js-popup Arrange a Viewing
+        +button('a')(href="#popup-arrange-viewing")._border._border_bg-white._short.__button.js-popup-top Arrange a Viewing
       +e.P.note <i>* </i> Utility bills and other services are paid separately
