--- a/app/components/popup-payment-form/popup-payment-form.pug
+++ b/app/components/popup-payment-form/popup-payment-form.pug
@@ -97,7 +97,7 @@ mixin popup-payment-form()
               +form-section-title('h4')._small Fill the form to continue
             +form-section-content._mg50
               +grid.grid_c14.grid_layout
-                +col({xl: 8, sm: 14})(data-form-element="sortCode")
+                +col({xl: 8, sm: 14})
                   +form-section-wrapper
                     +form-box('Card Number')
                       +input(type="text" name="cardNumber" placeholder="Card Number" required)
