--- a/app/pages/host-space-offers/host-space-offers.pug
+++ b/app/pages/host-space-offers/host-space-offers.pug
@@ -15,7 +15,7 @@ block content
           +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to space list
         +page-header-main.hide-md
           +breadcrumbs(['Home', 'My offers', 'Blooming Founders (Former Blooms London old Factory)'])
-          +button-plus('a')(href="#popup-add-rental-offer")._plus_big.__button_big.js-popup Add new rental offer for this space
+          +button-plus('a')(href="#popup-add-rental-offer")._plus_big.__button_big.js-popup-top Add new rental offer for this space
   +table-head.hide-md
     .container
       +grid.grid_layout.grid_no-top.table-head__wrapper
