--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -52,8 +52,8 @@ block content
       +page-title._small Попапы
       +e.list
         +link(href="#popup-signin").js-popup Popup Sign In
-        +link(href="#popup-add-rental-offer").js-popup Popup Add rental offer
-        +link(href="#popup-arrange-viewing").js-popup Popup Arrange Viewing
+        +link(href="#popup-add-rental-offer").js-popup-top Popup Add rental offer
+        +link(href="#popup-arrange-viewing").js-popup-top Popup Arrange Viewing
         +link(href="#popup-subscribe").js-popup Popup subscribe
         +link(href="#popup-subscribe-host").js-popup Popup subscribe for host
         +link(href="#popup-cancel-request").js-popup Popup cancel request
@@ -68,10 +68,10 @@ block content
         +link(href="#popup-cancellation").js-popup Popup cancel reservation
         +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
         +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
-        +link(href="#popup-add-offer-tc").js-popup Popup Add rental offer with terms and conditins for one offer
+        +link(href="#popup-add-offer-tc").js-popup-top Popup Add rental offer with terms and conditins for one offer
         +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
         +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
-        +link(href="#popup-payment-form").js-popup Popup payment form
+        +link(href="#popup-payment-form").js-popup-top Popup payment form
 
 block panels
   +main-menu
