--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1994,6 +1994,8 @@ block content
         +request-full('1', '1', '455', 'buttons')
         +ui-description .request with status
         +request-full('1', '2', '730', 'accept')
+        +ui-description .request new version
+        +request-full-new({new: 'new', create: 'Today, 14:00', space: {image: 'assets/images/space12.jpg', name: "RNR Property - Oxford Street", offer: {box: '_green', name: "office space"}, describe: "Offer: 5th floor apart-function zone offices space. Room 558"}, type: "Tenancy", status: "request", period: {name: "Requested period:", start: {ISO: "2019-01-18", text: '18 January 2019'}, end: {ISO: '2020-01-18', text: '18 January 2020'} }})
 
     //- footnote-star
     +ui-section
@@ -2712,6 +2714,22 @@ block content
                   +state()._right._dcheck._light Signed by both sides
                 +status-button({name: 'Invoices' , status: true}).__state
                   +state()._right._orange._light <b>1</b> unpaid invoice
+          //- new version
+          +col({xl: 3, md: 12})
+            +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
+              +e.informer
+                +e.links
+                  +link-icon('calendar2')._underline._icon_right._no-shadow._white.__link Suggest another date and time
+          +col({xl: 3, md: 12})
+            +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
+              +e.informer
+                +e.links
+                  +link-icon('calendar2')._underline._icon_right._no-shadow._white.__link Suggest another date and time
+          +col({xl: 3, md: 12})
+            +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
+              +e.informer
+                +e.links
+                  +link-icon('calendar2')._underline._icon_right._no-shadow._white.__link Suggest another date and time
 
     //- toolbar
     +ui-section
