--- a/app/blocks/offers/offers.pug
+++ b/app/blocks/offers/offers.pug
@@ -9,7 +9,7 @@ mixin offers-header(color, name, count)
       +e.H3.title!= name
     +e.info
       +e.count(data-offers-count)!= count
-      +e.A.add-button(href="#popup-add-rental-offer" title="Add new offer").js-popup
+      +e.A.add-button(href="#popup-add-rental-offer" title="Add new offer").js-popup-top
         +e.SPAN.icon
 
 mixin offers-heading(color, name)
@@ -27,4 +27,4 @@ mixin offers-describe()
     +e.column_left
       +e.text There is now Meeting Room offers for this Space yet.
     +e.column_right
-      +button('a')(href="#popup-add-offer-tc")._short._border.__button.js-popup Add Meeting Room offer
+      +button('a')(href="#popup-add-offer-tc")._short._border.__button.js-popup-top Add Meeting Room offer
