--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -151,6 +151,7 @@ $color-peach: #d67659;
 $color-confirm: #249d79;
 $color-green-check: #75cda5;
 $color-state-light: #87919d;
+$color-green-dark: #259d79;
 $color-toolbar: #2b323c;
 $color-chat-message: #f04734;
 $color-profile-post: #86909c;
