--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -362,6 +362,11 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    margin-top: 29px;
+
+    &_mt60 {
+      margin-top: 60px;
+    }
   }
 
   &__link {
@@ -377,6 +382,25 @@
 
     &:not(:last-child) {
       margin-bottom: 10px;
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  &__button {
+    margin-top: 10px;
+    width: 100%;
+
+    &_mw250 {
+      max-width: 250px;
     }
   }
 
@@ -650,7 +674,7 @@
       }
 
       &__informer {
-        padding: 0 19px;
+        padding: 3px 19px 8px;
         box-sizing: border-box;
       }
     }
