--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -38,9 +38,9 @@ block content
         +link(href="search-result.html") SpacePool - Search result (search-result.html)
         +link(href="reservations.html") SpacePool - My reservations (reservations.html)
         +link(href="new-space-step8.html") SpacePool - HOST My rental offers New Space Step 6 (New step Terms and Conditions) (new-space-step8.html)
-        +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
-        +link(href="deal-passport-state2.html") SpacePool - Deal Passport (deal-passport-state2.html)
-        +link(href="deal-passport-state3.html") SpacePool - Deal Passport (deal-passport-state3.html)
+        +link(href="deal-passport.html") SpacePool - Deal Passport UPDATE Confimation required HOST (deal-passport.html)
+        +link(href="deal-passport-state2.html") SpacePool - Deal Passport UPDATE Confimation required GUEST (deal-passport-state2.html)
+        +link(href="deal-passport-state3.html") SpacePool - Deal Passport UPDATE Confirmed(deal-passport-state3.html)
         +link(href="deal-passport-state4.html") SpacePool - Deal Passport (deal-passport-state4.html)
         +link(href="host-reservations.html") HOST reservations NEW (host-reservations.html)
         +link(href="signup.html") Sign Up (signup.html)
