--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2746,17 +2746,17 @@ block content
                   body
                     +e.TR.row
                       +e.TD.cell_head Order type
-                      +e.TD.cell_fz20._bold Viewing
+                      +e.TD.cell_fz20._fz20_v2._bold Viewing
                     +e.TR.row
                       +e.TD.cell_head Date
-                      +e.TD.cell_fz20._bold 28 August, 2019
+                      +e.TD.cell_fz20._fz20_v2._bold 28 August, 2019
                     +e.TR.row
                       +e.TD.cell_head Time
-                      +e.TD.cell_fz20._bold 14:00
+                      +e.TD.cell_fz20._fz20_v2._bold 14:00
                 +e.buttons
-                  +button()._short._mob-smaller.__button(href="#") Confirm viewing
+                  +button()._short._mob-smaller.__button_mw250(href="#") Confirm viewing
                 +e.links
-                  +link-icon('calendar2')._underline._icon_right._no-shadow._white.__link Suggest another date and time
+                  +link-icon('calendar2')._underline._icon_right._icon_right_pr25._no-shadow._white._cal-v2.__link Suggest another date and time
           +col({xl: 3, md: 12})
             +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
               +e.informer
@@ -2764,20 +2764,20 @@ block content
                   body
                     +e.TR.row
                       +e.TD.cell_head Order type
-                      +e.TD.cell_fz20._bold Viewing
+                      +e.TD.cell_fz20._fz20_v2._bold Viewing
                     +e.TR.row
                       +e.TD.cell_head Date
-                      +e.TD.cell_fz20._bold 28 August, 2019
+                      +e.TD.cell_fz20._fz20_v2._bold 28 August, 2019
                     +e.TR.row
                       +e.TD.cell_head Time
-                      +e.TD.cell_fz20._bold 14:00
+                      +e.TD.cell_fz20._fz20_v2._bold 14:00
                     +e.TR.row
                       +e.TD.cell_head Status
-                      +e.TD.cell_fz20._bold
+                      +e.TD.cell_fz20._fz20_v2._bold
                         +request-status-simple._orange._up._fz17.__status
                           b AWAITING CONFIRMATION
-                +e.links
-                  +link-icon('calendar2')._underline._icon_right._no-shadow._white.__link Suggest another date and time
+                +e.links_mt60
+                  +link-icon('calendar2')._underline._icon_right._icon_right_pr25._no-shadow._white._cal-v2.__link Suggest another date and time
           +col({xl: 3, md: 12})
             +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
               +e.informer
@@ -2785,20 +2785,20 @@ block content
                   body
                     +e.TR.row
                       +e.TD.cell_head Order type
-                      +e.TD.cell_fz20._bold Viewing
+                      +e.TD.cell_fz20._fz20_v2._bold Viewing
                     +e.TR.row
                       +e.TD.cell_head Date
-                      +e.TD.cell_fz20._bold 28 August, 2019
+                      +e.TD.cell_fz20._fz20_v2._bold 28 August, 2019
                     +e.TR.row
                       +e.TD.cell_head Time
-                      +e.TD.cell_fz20._bold 14:00
+                      +e.TD.cell_fz20._fz20_v2._bold 14:00
                     +e.TR.row
                       +e.TD.cell_head Status
-                      +e.TD.cell_fz20._bold
+                      +e.TD.cell_fz20._fz20_v2._bold
                         +request-status-simple._dark-green._up._fz17.__status
                           b CONFIRMED
-                +e.links
-                  +link-icon('calendar2')._underline._icon_right._no-shadow._white.__link Suggest another date and time
+                +e.links_mt60
+                  +link-icon('calendar2')._underline._icon_right._icon_right_pr25._no-shadow._white._cal-v2.__link Suggest another date and time
 
     //- toolbar
     +ui-section
