--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -81,6 +81,10 @@
           padding-right: 35px;
         }
       }
+
+      &_pr25 {
+        padding-right: 25px;
+      }
     }
   }
 
@@ -251,6 +255,11 @@
     &_calendar2 {
       width: 14px;
       height: 14px;
+
+      #{$b}_cal-v2 & {
+        width: 12px;
+        height: 12px;
+      }
     }
 
     &_save {
