--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -373,6 +373,8 @@
     @include text-big;
 
     line-height: 1.2;
+    max-width: 100%;
+    text-align: center;
 
     @include screen('sm') {
       @include text15;
