--- a/app/pages/deal-passport/deal-passport-state2.pug
+++ b/app/pages/deal-passport/deal-passport-state2.pug
@@ -43,8 +43,7 @@ block content
                     +e.TR.row
                       +e.TD.cell_head Status
                       +e.TD.cell_fz20._fz20_v2._bold
-                        +request-status-simple._orange._up._fz17.__status
-                          b AWAITING CONFIRMATION
+                        +request-status-simple._orange._up._fz17._bold.__status AWAITING CONFIRMATION
                 +e.links_mt60
                   +link-icon('calendar2')._underline._icon_right._icon_right_pr25._no-shadow._white._cal-v2.__link Suggest another date and time
         +content-column-main._no-ptop.hide-md
