--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -38,9 +38,9 @@ block content
         +link(href="search-result.html") SpacePool - Search result (search-result.html)
         +link(href="reservations.html") SpacePool - My reservations (reservations.html)
         +link(href="new-space-step8.html") SpacePool - HOST My rental offers New Space Step 6 (New step Terms and Conditions) (new-space-step8.html)
-        +link(href="deal-passport.html") SpacePool - Deal Passport UPDATE Confimation required HOST (deal-passport.html)
-        +link(href="deal-passport-state2.html") SpacePool - Deal Passport UPDATE Confimation required GUEST (deal-passport-state2.html)
-        +link(href="deal-passport-state3.html") SpacePool - Deal Passport UPDATE Confirmed(deal-passport-state3.html)
+        +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
+        +link(href="deal-passport-state2.html") SpacePool - Deal Passport  (deal-passport-state2.html)
+        +link(href="deal-passport-state3.html") SpacePool - Deal Passport(deal-passport-state3.html)
         +link(href="deal-passport-state4.html") SpacePool - Deal Passport (deal-passport-state4.html)
         +link(href="host-reservations.html") HOST reservations NEW (host-reservations.html)
         +link(href="signup.html") Sign Up (signup.html)
@@ -48,6 +48,9 @@ block content
         +link(href="signup-afterverification-message-host.html") Sign Up after verification message (for host) (signup-afterverification-message-host.html)
         +link(href="signup-afterverification-message.html") Sign Up after verification message (signup-afterverification-message.html)
         +link(href="signup-host-info.html") Sign Up host important info (signup-host-info.html)
+        +link(href="deal-passport-viewing.html") SpacePool - Deal Passport Viewing Confimation required HOST (deal-passport-viewing.html)
+        +link(href="deal-passport-viewing2.html") SpacePool - Deal Passport Viewing Confimation required GUEST (deal-passport-viewing2.html)
+        +link(href="deal-passport-viewing3.html") SpacePool - Deal Passport Viewing Confirmed(deal-passport-viewing3.html)
 
       +page-title._small Попапы
       +e.list
