--- a/app/blocks/photo-preview/photo-preview.pug
+++ b/app/blocks/photo-preview/photo-preview.pug
@@ -1,7 +1,7 @@
 mixin photo-preview(name)
   - var nm = name || 'photo'
-  +b.photo-preview&attributes(attributes)(data-preview-item data-callback="deleteOnBackend")
-    +e.INPUT(type="hidden" name=nm)
+  +b.photo-preview&attributes(attributes)(data-preview-item data-callback="deleteOnBackend" data-name-crop-input="photoCrop")
+    +e.INPUT(type="hidden" name=nm data-file-source)
     +e.BUTTON.delete.js-delete-file(type="button")
       +icon('cross').delete-icon
     block
@@ -10,19 +10,13 @@ mixin photo-preview-preview(isMain, value)
   - var val = value || 'photo';
   +e.LABEL.preview&attributes(attributes)
     - if (isMain) {
-      +e.INPUT.main(type="radio" name="isMain" value=val checked="checked")
+      +e.INPUT.main(type="radio" name="isMain" value=val checked="checked" data-crop-starter)
     - } else {
-      +e.INPUT.main(type="radio" name="isMain" value=val)
+      +e.INPUT.main(type="radio" name="isMain" value=val data-crop-starter)
     - }
     +e.media(data-preview-image)
       block
     +e.caption Main photo
-    +e.croparea
-      +e.hint_pt
-        +e.hint-text Cropped area
-      +e.area
-      +e.hint
-        +e.hint-text Cropped area
     +e.label
       +link-icon('img', 'span')._icon_small._icon_sz._underline._no-shadow Set as main Photo
 
