--- a/app/blocks/photo-preview/photo-preview.scss
+++ b/app/blocks/photo-preview/photo-preview.scss
@@ -1,3 +1,5 @@
+@import '../../node_modules/cropperjs/src/css/cropper.scss';
+
 .photo-preview {
   $b: &;
 
@@ -115,6 +117,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    pointer-events: auto;
   }
 
   &__image {
@@ -332,11 +335,73 @@
     height: 100%;
     opacity: 0;
     transition: opacity $ease-main;
+    pointer-events: none;
 
     #{$b}__main:checked ~ & {
-      opacity: 1;
+      opacity: 0;
     }
   }
+
+  .cropper {
+    &-view-box {
+      outline: 3px dotted $color-white;
+      box-shadow: 1px 1px 0 $color-shadow;
+
+      &::before, &::after {
+        @include text;
+
+        font-family: $font-main;
+        display: inline-block;
+        position: absolute;
+        content: 'Cropped area';
+        text-align: center;
+        box-sizing: border-box;
+        width: 100%;
+        color: $color-white;
+        line-height: (26 / 14);
+        z-index: 3;
+
+        @include screen('sm') {
+          @include text10;
+
+          line-height: (26 / 14);
+        }
+      }
+
+      &::before {
+        bottom: 100%;
+        left: 0;
+        padding-bottom: 11px;
+
+        @include screen('sm') {
+          padding-bottom: 5px;
+        }
+      }
+
+      &::after {
+        top: 100%;
+        left: 0;
+        padding-top: 11px;
+
+        @include screen('sm') {
+          padding-top: 5px;
+        }
+      }
+    }
+
+    &-modal {
+      background-color: $color-hint-bg;
+      opacity: .63;
+    }
+  }
+
+  // .cropper-container {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
   &__area {
     position: relative;
